--- a/.github/workflows/pulse.yml
+++ b/.github/workflows/pulse.yml
@@ -28,6 +28,9 @@ jobs:
         run: |
           git config user.name  "Archive Pulse Bot"
           git config user.email "actions@github.com"
-          git add archive/signals/pulse_badge.json archive/signals/modules_index.json archive/signals/signal_beacon.json README.md || true
+          git add archive/signals/pulse_badge.json || true
+          git add archive/signals/modules_index.json || true
+          git add archive/signals/signal_beacon.json || true
+          git add README.md || true
           git diff --quiet && echo "No changes" || git commit -m "chore(pulse): refresh modules index"
           git push
