--- a/seeds/modules.yml
+++ b/seeds/modules.yml
@@ -18,7 +18,7 @@
   name: Archive Model
   emoji: "🫀"
   orbit: core
-  status: seed
+  status: developing
   tags: [records, glossary, tags, statuses]
   glyphs: [archive, hub, signal]
   repo_url: https://github.com/zbreeden/archive-model
