--- a/.github/workflows/pulse-constellation.yml
+++ b/.github/workflows/pulse-constellation.yml
@@ -4,17 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       dry_run:
-        description: "Run without pushing changes"
+        description: "Run without committing/pushing changes"
         required: false
         type: boolean
         default: false
   push:
     paths:
-      - "pulse-constellation.sh"
-      - "scripts/**"
+      - "scripts/pulse-constellation.sh"
+      - "signals/**"
       - ".github/workflows/pulse-constellation.yml"
   schedule:
-    # 09:00 America/New_York ≈ 13:00 UTC (adjusts with DST via manual updates if needed)
+    # 09:00 America/New_York ≈ 13:00 UTC (update if you want a different local time)
     - cron: "0 13 * * *"
 
 permissions:
@@ -28,9 +28,7 @@ jobs:
       cancel-in-progress: false
 
     env:
-      # If your script needs to authenticate to *other* repos, provide a PAT via repo secret HUB_PAT.
-      # For pushes to the current repo, GITHUB_TOKEN (below) is usually enough.
-      HUB_PAT: ${{ secrets.HUB_PAT }}
+      HUB_PAT: ${{ secrets.HUB_PAT }}      # Only needed if your script touches other repos/APIs beyond GITHUB_TOKEN
       HUB_OWNER: zbreeden
       HUB_REPO: archive-model
       DRY_RUN: ${{ inputs.dry_run && '1' || '0' }}
@@ -39,32 +37,45 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # needed if your script inspects history
+          fetch-depth: 0
 
       - name: Set Git identity for commits
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Ensure script is executable
-        run: chmod +x .scripts/pulse-constellation.sh
+      - name: Verify files present
+        run: |
+          echo "Repo root: $(pwd)"
+          ls -la
+          echo "--- scripts dir ---"
+          ls -la scripts || true
+          test -f scripts/pulse-constellation.sh || (echo "scripts/pulse-constellation.sh not found" && exit 1)
 
-      # Optional: surface script version and working dir for debugging
+      - name: Ensure script is LF & executable
+        run: |
+          # Normalize CRLF (prevents /usr/bin/env: 'bash\r': No such file or directory)
+          sed -i 's/\r$//' scripts/pulse-constellation.sh
+          chmod +x scripts/pulse-constellation.sh
+          head -n1 scripts/pulse-constellation.sh | sed -e 's/^/shebang: /'
+
       - name: Pre-flight info
         run: |
           echo "Branch: $GITHUB_REF_NAME"
-          echo "Dry run: $DRY_RUN"
+          echo "Dry run (env DRY_RUN): ${DRY_RUN:-0}"
           bash --version
           git status --porcelain
 
       - name: Run pulse script
         shell: bash
         env:
-          # Actions’ built-in token – good for pushing to *this* repo.
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   # For pushes to *this* repo
+          HUB_PAT: ${{ secrets.HUB_PAT }}
+          HUB_OWNER: zbreeden
+          HUB_REPO: archive-model
         run: |
           set -euo pipefail
-          ./pulse-constellation.sh
+          bash scripts/pulse-constellation.sh
 
       - name: Commit & push any changes
         if: ${{ inputs.dry_run != true }}
@@ -75,7 +86,6 @@ jobs:
           if [[ -n "$(git status --porcelain)" ]]; then
             git add -A
             git commit -m "Pulse: $(date -u +'%Y-%m-%dT%H:%M:%SZ')"
-            # Use the default actions token (preferred) to push to this repo
             git push
           else
             echo "No changes to commit."
