Disable scheduled trigger in pulse-constellation.yml
Comment out the cron schedule for the workflow.

--- a/.github/workflows/pulse-constellation.yml
+++ b/.github/workflows/pulse-constellation.yml
@@ -15,7 +15,7 @@ on:
       - ".github/workflows/pulse-constellation.yml"
   schedule:
     # 09:00 America/New_York ≈ 13:00 UTC (update if you want a different local time)
-    - cron: "0 13 * * *"
+    # cron: "0 13 * * *"
 
 permissions:
   contents: write
