--- a/.github/workflows/pulse-constellation.yml
+++ b/.github/workflows/pulse-constellation.yml
@@ -13,7 +13,7 @@ on:
       - "scripts/pulse-constellation.sh"
       - "signals/**"
       - ".github/workflows/pulse-constellation.yml"
-  schedule:
+ # schedule:
     # 09:00 America/New_York ≈ 13:00 UTC (update if you want a different local time)
     # cron: "0 13 * * *"
 
